--- a/composer.json
+++ b/composer.json
@@ -26,8 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2",
-        "dominionenterprises/dws-coding-standard": "~1.1",
-        "lib-libxml": "*"
+        "dominionenterprises/dws-coding-standard": "~1.1"
     },
     "autoload": {
         "psr-4": { "DominionEnterprises\\Cronus\\": "src" }
