--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ php:
 services: mongodb
 before_script:
   - echo 'extension="mongo.so"' >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini
+  - bash -c 'while ! exec 6<>/dev/tcp/localhost/27017; do echo "$(date) - still trying to connect to mongo"; sleep 1; done'
 script: ./build.php
