:email: Update email addresses for Chad and myself.

--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "authors": [
         {
             "name": "Chad Gray",
-            "email": "chad.gray@dominionenterprises.com",
+            "email": "chadwickgray@gmail.com",
             "role": "Developer"
         },
         {
             "name": "Spencer Rinehart",
-            "email": "spencer.rinehart@dominionenterprises.com",
+            "email": "anubis@overthemonkey.com",
             "role": "Developer"
         },
         {
