--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.2",
+        "satooshi/php-coveralls": "~0.6.1",
         "dominionenterprises/dws-coding-standard": "~1.1"
     },
     "autoload": {
